// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render a select input with options 1`] = `
<DocumentFragment>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 hDeOGV"
  >
    <div
      class="relative flex flex-1 h-full"
    >
      <select
        class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="Select"
      >
        <option
          data-testid="select-option"
          selected=""
          value="1"
        >
          Option 1
        </option>
        <option
          data-testid="select-option"
          value="2"
        >
          Option 2
        </option>
      </select>
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
    >
      <div
        class=""
      >
        <span
          class="w-12 text-lg pointer-events-none text-theme-secondary-text"
        >
          <div
            class="sc-bdfBwQ fPrsah"
            height="1em"
            width="1em"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select should render a select input with placeholder 1`] = `
<DocumentFragment>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 hDeOGV"
  >
    <div
      class="relative flex flex-1 h-full"
    >
      <select
        class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="Select"
      >
        <option
          disabled=""
          selected=""
          value=""
        >
          Select option
        </option>
      </select>
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
    >
      <div
        class=""
      >
        <span
          class="w-12 text-lg pointer-events-none text-theme-secondary-text"
        >
          <div
            class="sc-bdfBwQ fPrsah"
            height="1em"
            width="1em"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
